<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/wid_search_dd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/wid_search_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_search_hint" >

    </EditText>

    <ImageButton 
        android:id="@+id/wid_search_btnimg"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:src="@drawable/ic_action_search"
    	style="?android:attr/borderlessButtonStyle"
    	android:contentDescription="@string/btn_search_text"
    	/>

</LinearLayout>